# arduino-fdk-aac

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  library.properties
docs/: index.html
docs/etc/: info.h
docs/html/: _a_a_c_costants_override_8h_source.html  _a_a_c_decoder_f_d_k_8h_source.html  _a_a_c_encoder_f_d_k_8h_source.html  _a_b_b_r_e_v.html  _e_n_c_o_d_e_r_b_e_h_a_v_i_o_u_r.html  _f_d_k__archdef_8h_source.html  _f_d_k__audio_8h.html  _f_d_k__audio_8h_source.html  _f_d_k__bitbuffer_8h_source.html  _f_d_k__bitstream_8h_source.html  _f_d_k__core_8h_source.html  _f_d_k__crc_8h_source.html  _f_d_k__decorrelate_8h_source.html  _f_d_k__delay_8h_source.html  _f_d_k__drc_dec_lib_8h_source.html  _f_d_k__hybrid_8h_source.html  _f_d_k__lpc_8h_source.html  _f_d_k__matrix_calloc_8h_source.html  _f_d_k__qmf__domain_8h_source.html  _f_d_k__tools__rom_8h_source.html  _f_d_k__trig_fcts_8h_source.html  _formulas.tex  _h_fgen__pre_flat_8h_source.html  _i_n_t_r_o.html  _l_i_b_u_s_e.html  _output_format.html  aac__ram_8h_source.html  aac__rom_8h_source.html  aac_enc__ram_8cpp.html  aac_enc__ram_8h.html  aac_enc__ram_8h_source.html  aac_enc__rom_8h.html  aac_enc__rom_8h_source.html  aacdec__drc_8h_source.html  aacdec__drc__types_8h_source.html  aacdec__hcr_8h_source.html  aacdec__hcr__bit_8h_source.html  aacdec__hcr__types_8h_source.html  aacdec__hcrs_8h_source.html  aacdec__pns_8h_source.html  (+1177 more)
documentation/html/: _a_a_c_encoder_8h_source.html  _a_b_b_r_e_v.html  _audio_tools_8h_source.html  _e_n_c_o_d_e_r_b_e_h_a_v_i_o_u_r.html  _f_d_k__archdef_8h_source.html  _f_d_k__audio_8h.html  _f_d_k__audio_8h_source.html  _f_d_k__bitbuffer_8h_source.html  _f_d_k__bitstream_8h_source.html  _f_d_k__core_8h_source.html  _f_d_k__crc_8h_source.html  _f_d_k__decorrelate_8h_source.html  _f_d_k__delay_8h_source.html  _f_d_k__drc_dec_lib_8h_source.html  _f_d_k__hybrid_8h_source.html  _f_d_k__lpc_8h_source.html  _f_d_k__matrix_calloc_8h_source.html  _f_d_k__qmf__domain_8h_source.html  _f_d_k__tools__rom_8h_source.html  (+1201 more)
src/: AAC.h  AACCostantsOverride.h  AACDecoderFDK.h  AACEncoderFDK.h  AudioTools.h  AudioToolsESP32.h  fdk_log.cpp  fdk_log.h
utils/: Readme.md  doxyfile  setup.py
(+679 files in other folders)
